--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -105,11 +105,13 @@
     </div>
   <% end %>
 
-  <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
-    <%= form.label :copy_from_team_id, 'Copy settings from:', class: 'form-label' %>
-    <%= form.collection_select :copy_from_team_id, current_user.owned_teams.reject { |team| team == @team }, :id, :name, { prompt: 'Select a team' }, { class: 'form-select' } %>
-    <p class="my-1 help-text">Copy settings from one of your other teams.</p>
-  </div>
+  <% if current_user.owned_teams.reject{ |team| team == @team }.any? %>
+    <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
+      <%= form.label :copy_from_team_id, 'Copy settings from:', class: 'form-label' %>
+      <%= form.collection_select :copy_from_team_id, current_user.owned_teams.reject { |team| team == @team }, :id, :name, { prompt: 'Select a team' }, { class: 'form-select' } %>
+      <p class="my-1 help-text">Copy settings from one of your other teams.</p>
+    </div>
+  <% end %>
 
   <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
     <button type="button" data-action="restore-defaults#restore" class="btn btn-sm btn-white">Restore defaults</button>
