show user avatar instead of profile icon in navigation bars if attached

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -7,7 +7,11 @@
     <!-- Main navigation links -->
     <div class="mb-6 space-y-1.5">
       <%= link_to profile_path, aria: { current: current_page?(profile_path) ? 'page' : nil }, class: "group sidebar-link #{current_page?(profile_path) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" do %>
-        <%= inline_svg_tag 'icons/profile.svg', class: 'size-5 text-soft motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' %>
+        <% if current_user.avatar.attached? %>
+          <%= image_tag current_user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' %>
+        <% else %>
+          <%= inline_svg_tag 'icons/profile.svg', class: 'size-5 text-soft motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' %>
+        <% end %>
         <span>Profile</span>
       <% end %>
       <%= link_to teams_path, aria: { current: current_page?(teams_path) ? 'page' : nil }, class: "group sidebar-link #{current_page?(teams_path) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" do %>
