--- a/app/views/pinned_pages/manage.html.erb
+++ b/app/views/pinned_pages/manage.html.erb
@@ -9,17 +9,17 @@
 
   <div>
     <%= form_with url: update_all_pinned_pages_path, method: :patch do |f| %>
-      <% @pinned_pages.each do |page| %>
-        <div class="form-group">
-          <div class="flex items-center gap-3">
+      <div class="form-group">
+        <% @pinned_pages.each do |page| %>
+          <div class="flex items-center gap-3 mb-3">
             <%= f.text_field "pinned_pages[#{page.id}][title]", value: page.title, class: 'form-input' %>
             <%= link_to pinned_page_path(page), data: { turbo_method: :delete }, class: 'text-red-700 dark:text-red-400' do %>
               <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
               <span class="sr-only">Delete page</span>
             <% end %>
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
 
       <%= f.submit 'Save changes', class: 'btn btn-primary' %>
     <% end %>
