--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
   <body class='relative antialiased font-normal leading-normal bg-white text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 dark:bg-slate-900'>
     <%= render "shared/flash" %>
+    <%= render "shared/pinned_pages_menu" if user_signed_in? %>
     <div class="flex w-full h-svh max-h-svh">
       <%= render "shared/sidebar" if user_signed_in? %>
       <div class="flex flex-col flex-1 h-full min-w-0">
