--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,24 +15,31 @@
 
     <div class="form-group">
       <%= f.label :email, class: 'form-label' %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-input', data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
+      <div class="relative">
+        <%= inline_svg_tag 'icons/envelope.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-input pl-10', data: { form_validation_target: 'email', action: 'input->form-validation#validateEmail' } %>
+      </div>
       <p class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</p>
     </div>
 
     <div class="form-group">
       <%= f.label :username, class: 'form-label' %>
-      <%= f.text_field :username, autocomplete: 'username', class: 'form-input', data: { form_validation_target: "username", action: "input->form-validation#validateUsername" } %>
+      <div class="relative">
+        <%= inline_svg_tag 'icons/user.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
+        <%= f.text_field :username, autocomplete: 'username', class: 'form-input pl-10', data: { form_validation_target: 'username', action: 'input->form-validation#validateUsername' } %>
+      </div>
       <p class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</p>
     </div>
 
-    <div class="form-group relative">
+    <div class="form-group">
       <%= f.label :password, class: 'form-label' %>
-      <div class="flex items-center" data-controller="password-visibility">
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-input w-full', data: { form_validation_target: "password", action: "input->form-validation#validatePassword input->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements", password_visibility_target: "password" } %>
+      <div data-controller="password-visibility" class="relative">
+        <%= inline_svg_tag 'icons/lock.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
+        <%= f.password_field :password, autocomplete: 'new-password', class: 'form-input pl-10', data: { form_validation_target: 'password', action: 'input->form-validation#validatePassword input->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements', password_visibility_target: 'password' } %>
 
-        <button type="button" class="-ml-9" data-action="password-visibility#toggle">
-          <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-6' %>
-          <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
+        <button type="button" class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-500" data-action="password-visibility#toggle">
+          <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-5' %>
+          <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-5 hidden' %>
         </button>
       </div>
 
@@ -48,14 +55,15 @@
       </div>
     </div>
 
-    <div class="form-group relative">
+    <div class="form-group">
       <%= f.label :password_confirmation, class: 'form-label' %>
-      <div class="flex items-center" data-controller="password-visibility">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-input', data: { form_validation_target: "passwordConfirmation", action: "input->form-validation#validatePasswordConfirmation", password_visibility_target: "password" } %>
+      <div data-controller="password-visibility" class="relative">
+        <%= inline_svg_tag 'icons/lock-check.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
+        <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-input pl-10', data: { form_validation_target: 'passwordConfirmation', action: 'input->form-validation#validatePasswordConfirmation', password_visibility_target: 'password' } %>
 
-        <button type="button" class="-ml-9" data-action="password-visibility#toggle">
-          <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-6' %>
-          <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
+        <button type="button" class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-500" data-action="password-visibility#toggle">
+          <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-5' %>
+          <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-5 hidden' %>
         </button>
       </div>
 
