--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -5,7 +5,7 @@
 
 <%- if forgot_password_check || confirmation_instructions_check || unlock_instructions_check || omniauth_check %>
   <div class="mt-4 text-center">
-    <%= link_to 'Forgot your password?', new_password_path(resource_name), class: 'btn-link text-sm' if forgot_password_check %>
+    <%= link_to 'Forgot password?', new_password_path(resource_name), class: 'btn-link text-sm' if forgot_password_check %>
 
     <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: 'btn-link text-sm' if confirmation_instructions_check %>
 
