fix: remove 'prose' classes no longer needed

--- a/app/views/teams/index.turbo_stream.erb
+++ b/app/views/teams/index.turbo_stream.erb
@@ -3,7 +3,7 @@
     <%= render 'teams/shared/team_list', teams: @other_teams %>
   <% else %>
     <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <p class="prose dark:prose-invert text-soft">No teams found.</p>
+      <p class="text-soft text-center">No teams found.</p>
     </div>
   <% end %>
 <% end %>
