--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -11,7 +11,7 @@
     </h2>
 
     <% unless @team.description.blank? %>
-      <p class="mx-auto prose text-center dark:prose-invert"><%= @team.description %></p>
+      <p class="text-soft text-center"><%= @team.description %></p>
     <% end %>
 
     <div class="flex flex-wrap items-center justify-center gap-4 mt-4">
