--- a/app/views/teams/show/_join_requests.html.erb
+++ b/app/views/teams/show/_join_requests.html.erb
@@ -11,6 +11,6 @@
   </div>
 <% else %>
   <div class="flex flex-col items-center justify-center gap-6 py-12">
-    <p class="prose dark:prose-invert text-soft">No new join requests.</p>
+    <p class="text-soft text-center">No new join requests.</p>
   </div>
 <% end %>
