--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -18,7 +18,7 @@
 
     <%= turbo_frame_tag 'searchResults' do %>
       <div class="flex flex-col items-center justify-center gap-6 py-12">
-        <p class="prose dark:prose-invert text-soft text-center">Start typing to find teams or other members.</p>
+        <p class="text-soft text-center">Start typing to find teams or other members.</p>
       </div>
     <% end %>
   </div>
