--- a/app/views/search/index.turbo_stream.erb
+++ b/app/views/search/index.turbo_stream.erb
@@ -12,7 +12,7 @@
       </div>
     <% else %>
       <div class="flex flex-col items-center justify-center gap-6 py-12">
-        <%= content_tag(:p, @query.present? ? 'No results found.' : 'Start typing to find teams or other members.', class: 'prose dark:prose-invert text-soft text-center') %>
+        <%= content_tag(:p, @query.present? ? 'No results found.' : 'Start typing to find teams or other members.', class: 'text-soft text-center') %>
       </div>
     <% end %>
   <% end %>
