--- a/app/views/teams/index/_membered_teams.html.erb
+++ b/app/views/teams/index/_membered_teams.html.erb
@@ -6,7 +6,7 @@
   <%= render 'teams/shared/team_list', teams: membered_teams %>
 <% else %>
   <div class="flex flex-col items-center justify-center gap-6 py-12">
-    <p class="prose dark:prose-invert text-soft">You're not a member of any teams yet.</p>
+    <p class="text-soft text-center">You're not a member of any teams yet.</p>
     <%= link_to 'Find a team', teams_path(tab: 'otherTeamsTab'), class: 'btn btn-white' %>
   </div>
 <% end %>
