--- a/app/views/teams/index/_other_teams.html.erb
+++ b/app/views/teams/index/_other_teams.html.erb
@@ -17,7 +17,7 @@
     <%= render 'teams/shared/team_list', teams: other_teams, show_members: true %>
   <% else %>
     <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <p class="prose dark:prose-invert text-soft">No teams found.</p>
+      <p class="text-soft text-center">No teams found.</p>
     </div>
   <% end %>
 <% end %>
