--- a/app/views/teams/index/_owned_teams.html.erb
+++ b/app/views/teams/index/_owned_teams.html.erb
@@ -9,7 +9,7 @@
   <%= render 'teams/shared/team_list', teams: owned_teams %>
 <% else %>
   <div class="flex flex-col items-center justify-center gap-6 py-12">
-    <p class="prose dark:prose-invert text-soft">You don't have any teams yet.</p>
+    <p class="text-soft text-center">You don't have any teams yet.</p>
     <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary' %>
   </div>
 <% end %>
