--- a/app/views/teams/show/_members.html.erb
+++ b/app/views/teams/show/_members.html.erb
@@ -18,7 +18,7 @@
       <%= render 'teams/show/member_list', team: team, members: members %>
     <% else %>
       <div class="flex flex-col items-center justify-center gap-6 py-12">
-        <p class="prose dark:prose-invert text-soft">No team members found.</p>
+        <p class="text-soft text-center">No team members found.</p>
       </div>
     <% end %>
   </div>
