--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -43,30 +43,34 @@
       </p>
     </div>
 
-    <div class="block mb-8 space-y-10 sm:flex sm:space-y-0 sm:items-center sm:justify-around">
+    <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
       <% if user.show_email? %>
-        <div class="space-y-2 text-center">
-          <p><%= user.email %></p>
-          <div class="flex items-center justify-center gap-3">
-            <%= mail_to user.email, class: 'btn btn-sm btn-white flex items-center gap-2' do %>
-              <%= inline_svg_tag 'icons/envelope-filled.svg', class: 'size-4' %>
-              <span>Email</span>
-            <% end %>
-          </div>
+        <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+          <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Email Address</h2>
+          <p class="text-lg font-bold mb-4">
+            <%= user.email %>
+          </p>
+          <%= mail_to user.email, class: 'btn btn-white w-full gap-2' do %>
+            <%= inline_svg_tag 'icons/envelope-filled.svg', class: 'size-5' %>
+            <span>Email</span>
+          <% end %>
         </div>
       <% end %>
 
       <% if user.show_phone? && user.phone_number? %>
-        <div class="space-y-2 text-center">
-          <p><%= number_to_phone(user.phone_number, area_code: true) %></p>
-          <div class="flex items-center justify-center gap-3">
-            <%= sms_to user.phone_number, class: 'btn btn-sm btn-white flex items-center gap-2' do %>
-              <%= inline_svg_tag 'icons/message-bubble.svg', class: 'size-4' %>
-              <span>Message</span>
+        <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+          <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Phone Number</h2>
+          <p class="text-lg font-bold mb-4">
+            <%= number_to_phone(user.phone_number, area_code: true) %>
+          </p>
+          <div class="flex items-center gap-2">
+            <%= sms_to user.phone_number, class: 'btn btn-white w-full gap-2' do %>
+              <%= inline_svg_tag 'icons/message-bubble.svg', class: 'size-5' %>
+              <span>Text</span>
             <% end %>
 
-            <%= phone_to user.phone_number, class: 'btn btn-sm btn-white flex items-center gap-2' do %>
-              <%= inline_svg_tag 'icons/phone-arrow-filled.svg', class: 'size-4' %>
+            <%= phone_to user.phone_number, class: 'btn btn-white w-full gap-2' do %>
+              <%= inline_svg_tag 'icons/phone-filled.svg', class: 'size-5' %>
               <span>Call</span>
             <% end %>
           </div>
