--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -3,7 +3,13 @@
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl px-4 mx-auto my-16">
   <div class="pb-6 text-center">
 
-    <%= image_tag @team.photo.variant(resize_to_limit: [150, 150]).processed, class: 'size-28 sm:size-32 md:size-36 rounded-lg drop-shadow-lg dark:drop-shadow-none mx-auto mb-4 object-cover' if @team.photo.attached? %>
+    <% if @team.photo.attached? %>
+      <%= image_tag @team.photo.variant(resize_to_limit: [150, 150]).processed, class: 'size-28 sm:size-32 md:size-36 rounded-lg drop-shadow-lg dark:drop-shadow-none mx-auto mb-4 object-cover' %>
+    <% else %>
+      <div class="size-28 sm:size-32 md:size-36 bg-slate-200 dark:bg-slate-800 rounded-lg drop-shadow-lg dark:drop-shadow-none grid place-items-center mx-auto mb-4">
+        <%= inline_svg_tag 'icons/team.svg', class: 'size-20 sm:size-24 md:size-28 text-soft' %>
+      </div>
+    <% end %>
 
     <h1 class="heading"><%= @team.name %></h1>
     <h2 class="my-1 text-lg text-slate-700 dark:text-slate-400">
