--- a/app/views/teams/show/_member.html.erb
+++ b/app/views/teams/show/_member.html.erb
@@ -1,7 +1,13 @@
 <div class="bg-slate-50/85 dark:bg-slate-800/85 divide-y rounded-lg border p-6 shadow backdrop-blur-sm dark:divide-slate-700 dark:border-slate-700 dark:shadow-none">
   <div class="flex items-start gap-4">
     <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex items-start gap-4 flex-1' do %>
-      <%= image_tag member.avatar.variant(resize_to_limit: [100, 100]).processed, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' if member.avatar.attached? %>
+      <% if member.avatar.attached? %>
+        <%= image_tag member.avatar.variant(resize_to_limit: [100, 100]).processed, class: 'shrink-0 size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' %>
+      <% else %>
+        <div class="size-12 bg-slate-200 dark:bg-slate-700 rounded-lg drop-shadow-lg dark:drop-shadow-none grid place-items-center">
+          <%= inline_svg_tag 'icons/user.svg', class: 'size-8 text-soft' %>
+        </div>
+      <% end %>
 
       <div class="flex-1">
         <p class='text-lg font-bold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500'>
