--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -58,7 +58,13 @@
             <div class="flex items-center">
               <span class="mr-4 -ml-1 font-mono row-number"></span>
               <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex gap-2 items-center mr-auto' do %>
-                <%= image_tag member.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-9 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' if member.avatar.attached? %>
+                <% if member.avatar.attached? %>
+                  <%= image_tag member.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-8 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' %>
+                <% else %>
+                  <div class="size-8 bg-slate-200 dark:bg-slate-700 rounded-lg drop-shadow-lg dark:drop-shadow-none grid place-items-center">
+                    <%= inline_svg_tag 'icons/user.svg', class: 'size-5 text-soft' %>
+                  </div>
+                <% end %>
                 <div class="flex flex-col-reverse">
                   <p class="transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= member.default_name %></p>
                   <%= content_tag(:p, member == current_user ? 'You' : 'Coach', class: 'help-text') if member.owns?(team) || member == current_user %>
