--- a/app/views/teams/index/_owned_teams.html.erb
+++ b/app/views/teams/index/_owned_teams.html.erb
@@ -1,8 +1,6 @@
 <div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10">
   <h1 class="heading">My Teams</h1>
-  <% if owned_teams.present? %>
-    <%= link_to 'New team', new_team_path, class: 'btn btn-primary' %>
-  <% end %>
+  <%= link_to 'New team', new_team_path, class: 'btn btn-primary' if owned_teams.present? %>
 </div>
 
 <% if owned_teams.present? %>
